# storepilot-ai

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  Procfile  _check.py  alembic.ini  create_tables.py  docker-compose.yml  pyproject.toml  requirements.txt  seed_data.py  setup.py  start.bat  start.sh  test_models.py  vercel.json
StorePilot AI/: index.html
StorePilot AI/assets/css/: base.css  components.css  layout.css  pages.css  variables.css
StorePilot AI/js/: api.js  app.js  components.js  utils.js
StorePilot AI/pages/: analysis.html  approvals.html  dashboard.html  findings.html  inventory.html  sales.html  tasks.html
alembic/: env.py
alembic/versions/: manual_001_initial.py
app/: main.py  models_registry.py
app/api/: health.py
app/api/v1/: router.py
app/core/: auth.py  config.py  database.py  error_handlers.py  exceptions.py  security.py
app/modules/ai_engine/: anthropic_provider.py  exceptions.py  fallback_service.py  json_parser.py  mock_provider.py  models.py  prompts.py  provider_base.py  router.py  schemas.py  service.py
app/modules/approvals/: models.py  router.py  schemas.py  service.py
app/modules/auth/: models.py  router.py  schemas.py  service.py
app/modules/dashboard/: router.py  schemas.py  service.py
app/modules/inventory/: models.py  (+3 more)
app/shared/: models.py
scripts/: seed.py
tests/: test_health.py
tests/integration/: test_operational_workflow_service.py
tests/unit/: test_ai_operational_analysis_service.py  test_dashboard_service.py  test_inventory_risk_service.py  test_sales_anomaly_service.py  test_task_service.py
(+18 files in other folders)
