[project]
name = "storepilot-ai"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.35",
    "psycopg2-binary==2.9.9",
    "bcrypt==4.2.0",
    "pyjwt==2.9.0",
    "email-validator==2.2.0",
    "alembic==1.13.2",
    "anthropic==0.39.0",
]

[tool.vercel]
entrypoint = "app.main:app"